// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawRemainder last day of Q1 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder\\">
            <path class=\\"remainder\\" d=\\"M419.529,19.875L149.832,7.098Z\\" fill=\\"url(#remainder-pattern)\\" stroke=\\"none\\"></path>
        </g>
    </g>
    <defs>
        <pattern id=\\"remainder-pattern\\" width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" patternUnits=\\"userSpaceOnUse\\" patternTransform=\\"rotate(20)\\">
            <rect width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" opacity=\\"0.8\\" fill=\\"rgb(213, 94, 0)\\"></rect>
            <text x=\\"0\\" y=\\"49.09090909090909\\" style=\\"font-size: 60px\\" fill=\\"white\\">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder last day of Q2 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder\\">
            <path class=\\"remainder\\" d=\\"M-18.069,419.611L-6.453,149.861Z\\" fill=\\"url(#remainder-pattern)\\" stroke=\\"none\\"></path>
        </g>
    </g>
    <defs>
        <pattern id=\\"remainder-pattern\\" width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" patternUnits=\\"userSpaceOnUse\\" patternTransform=\\"rotate(20)\\">
            <rect width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" opacity=\\"0.8\\" fill=\\"rgb(213, 94, 0)\\"></rect>
            <text x=\\"0\\" y=\\"49.09090909090909\\" style=\\"font-size: 60px\\" fill=\\"white\\">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder last day of Q3 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder\\">
            <path class=\\"remainder\\" d=\\"M-419.685,-16.263L-149.888,-5.808Z\\" fill=\\"url(#remainder-pattern)\\" stroke=\\"none\\"></path>
        </g>
    </g>
    <defs>
        <pattern id=\\"remainder-pattern\\" width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" patternUnits=\\"userSpaceOnUse\\" patternTransform=\\"rotate(20)\\">
            <rect width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" opacity=\\"0.8\\" fill=\\"rgb(213, 94, 0)\\"></rect>
            <text x=\\"0\\" y=\\"49.09090909090909\\" style=\\"font-size: 60px\\" fill=\\"white\\">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder last day of Q4 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder\\">
            <path class=\\"remainder\\" d=\\"M14.457,-419.751L5.163,-149.911Z\\" fill=\\"url(#remainder-pattern)\\" stroke=\\"none\\"></path>
        </g>
    </g>
    <defs>
        <pattern id=\\"remainder-pattern\\" width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" patternUnits=\\"userSpaceOnUse\\" patternTransform=\\"rotate(20)\\">
            <rect width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" opacity=\\"0.8\\" fill=\\"rgb(213, 94, 0)\\"></rect>
            <text x=\\"0\\" y=\\"49.09090909090909\\" style=\\"font-size: 60px\\" fill=\\"white\\">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder start of Q1 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder\\">
            <path class=\\"remainder\\" d=\\"M21.68,-419.44A420,420,0,0,1,418.876,-30.7L149.599,-10.964A150,150,0,0,0,7.743,-149.8Z\\" fill=\\"url(#remainder-pattern)\\" stroke=\\"none\\"></path>
        </g>
    </g>
    <defs>
        <pattern id=\\"remainder-pattern\\" width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" patternUnits=\\"userSpaceOnUse\\" patternTransform=\\"rotate(20)\\">
            <rect width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" opacity=\\"0.8\\" fill=\\"rgb(213, 94, 0)\\"></rect>
            <text x=\\"0\\" y=\\"49.09090909090909\\" style=\\"font-size: 60px\\" fill=\\"white\\">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder start of Q2 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder\\">
            <path class=\\"remainder\\" d=\\"M419.529,19.875A420,420,0,0,1,32.502,418.74L11.608,149.55A150,150,0,0,0,149.832,7.098Z\\" fill=\\"url(#remainder-pattern)\\" stroke=\\"none\\"></path>
        </g>
    </g>
    <defs>
        <pattern id=\\"remainder-pattern\\" width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" patternUnits=\\"userSpaceOnUse\\" patternTransform=\\"rotate(20)\\">
            <rect width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" opacity=\\"0.8\\" fill=\\"rgb(213, 94, 0)\\"></rect>
            <text x=\\"0\\" y=\\"49.09090909090909\\" style=\\"font-size: 60px\\" fill=\\"white\\">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder start of Q3 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder\\">
            <path class=\\"remainder\\" d=\\"M-18.069,419.611A420,420,0,0,1,-418.597,34.304L-149.499,12.251A150,150,0,0,0,-6.453,149.861Z\\" fill=\\"url(#remainder-pattern)\\" stroke=\\"none\\"></path>
        </g>
    </g>
    <defs>
        <pattern id=\\"remainder-pattern\\" width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" patternUnits=\\"userSpaceOnUse\\" patternTransform=\\"rotate(20)\\">
            <rect width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" opacity=\\"0.8\\" fill=\\"rgb(213, 94, 0)\\"></rect>
            <text x=\\"0\\" y=\\"49.09090909090909\\" style=\\"font-size: 60px\\" fill=\\"white\\">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder start of Q4 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder\\">
            <path class=\\"remainder\\" d=\\"M-419.685,-16.263A420,420,0,0,1,-36.105,-418.445L-12.895,-149.445A150,150,0,0,0,-149.888,-5.808Z\\" fill=\\"url(#remainder-pattern)\\" stroke=\\"none\\"></path>
        </g>
    </g>
    <defs>
        <pattern id=\\"remainder-pattern\\" width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" patternUnits=\\"userSpaceOnUse\\" patternTransform=\\"rotate(20)\\">
            <rect width=\\"73.63636363636364\\" height=\\"57.27272727272727\\" opacity=\\"0.8\\" fill=\\"rgb(213, 94, 0)\\"></rect>
            <text x=\\"0\\" y=\\"49.09090909090909\\" style=\\"font-size: 60px\\" fill=\\"white\\">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainderLabel last day of Q1 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder-label\\">
            <text x=\\"-391.5\\" y=\\"13.5\\" style=\\"font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left\\" fill=\\"rgb(213, 94, 0)\\" stroke=\\"none\\">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel last day of Q2 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder-label\\">
            <text x=\\"-391.5\\" y=\\"13.5\\" style=\\"font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left\\" fill=\\"rgb(213, 94, 0)\\" stroke=\\"none\\">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel last day of Q3 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder-label\\">
            <text x=\\"171\\" y=\\"13.5\\" style=\\"font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left\\" fill=\\"rgb(213, 94, 0)\\" stroke=\\"none\\">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel last day of Q4 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder-label\\">
            <text x=\\"171\\" y=\\"13.5\\" style=\\"font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left\\" fill=\\"rgb(213, 94, 0)\\" stroke=\\"none\\">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel start of Q1 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder-label\\">
            <text x=\\"-391.5\\" y=\\"13.5\\" style=\\"font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left\\" fill=\\"rgb(213, 94, 0)\\" stroke=\\"none\\">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel start of Q2 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder-label\\">
            <text x=\\"-391.5\\" y=\\"13.5\\" style=\\"font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left\\" fill=\\"rgb(213, 94, 0)\\" stroke=\\"none\\">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel start of Q3 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder-label\\">
            <text x=\\"171\\" y=\\"13.5\\" style=\\"font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left\\" fill=\\"rgb(213, 94, 0)\\" stroke=\\"none\\">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel start of Q4 1`] = `
"<svg id=\\"clock\\" width=\\"1000\\" height=\\"1000\\">
    <g transform=\\"translate(500 500)\\">
        <g id=\\"remainder-label\\">
            <text x=\\"171\\" y=\\"13.5\\" style=\\"font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left\\" fill=\\"rgb(213, 94, 0)\\" stroke=\\"none\\">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;
